Sixth task completed